--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "@google/generative-ai": "^0.14.1",
     "@mui/material": "^5.16.0",
     "generative-ai": "^0.1.4",
+    "highlight.js": "^11.10.0",
     "locomotive-scroll": "^4.1.4",
+    "marked": "^13.0.2",
+    "prism-react-renderer": "^2.3.1",
+    "prismjs": "^1.29.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
