used framermotion little bit

--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@emotion/styled": "^11.11.5",
     "@google/generative-ai": "^0.14.1",
     "@mui/material": "^5.16.0",
+    "framer-motion": "^11.2.13",
     "generative-ai": "^0.1.4",
     "highlight.js": "^11.10.0",
+    "html-react-parser": "^5.1.10",
     "locomotive-scroll": "^4.1.4",
     "marked": "^13.0.2",
     "prism-react-renderer": "^2.3.1",
