--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.5",
     "@google/generative-ai": "^0.14.1",
     "@mui/material": "^5.16.0",
+    "@reduxjs/toolkit": "^2.2.6",
     "framer-motion": "^11.2.13",
     "generative-ai": "^0.1.4",
     "highlight.js": "^11.10.0",
@@ -25,7 +26,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
-    "react-syntax-highlighter": "^15.5.0"
+    "react-redux": "^9.1.2",
+    "react-syntax-highlighter": "^15.5.0",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
