--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "html-react-parser": "^5.1.10",
     "locomotive-scroll": "^4.1.4",
     "marked": "^13.0.2",
+    "mui": "^0.0.1",
     "prism-react-renderer": "^2.3.1",
     "prismjs": "^1.29.0",
     "react": "^18.3.1",
