--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@google/generative-ai": "^0.14.1",
+    "@mistralai/mistralai": "^0.5.0",
     "@mui/material": "^5.16.0",
     "@reduxjs/toolkit": "^2.2.6",
     "framer-motion": "^11.2.13",
