--- a/package.json
+++ b/package.json
@@ -16,12 +16,18 @@
     "@mistralai/mistralai": "^0.5.0",
     "@mui/material": "^5.16.0",
     "@reduxjs/toolkit": "^2.2.6",
+    "axios": "^1.7.2",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
+    "express": "^4.19.2",
     "framer-motion": "^11.2.13",
     "generative-ai": "^0.1.4",
     "highlight.js": "^11.10.0",
     "html-react-parser": "^5.1.10",
+    "jsonwebtoken": "^9.0.2",
     "locomotive-scroll": "^4.1.4",
     "marked": "^13.0.2",
+    "mongoose": "^8.5.1",
     "mui": "^0.0.1",
     "prism-react-renderer": "^2.3.1",
     "prismjs": "^1.29.0",
@@ -29,6 +35,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^6.25.0",
     "react-syntax-highlighter": "^15.5.0",
     "recoil": "^0.7.7"
   },
