--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@google-ai/generativelanguage": "^2.7.0",
     "@google/generative-ai": "^0.14.1",
     "@mistralai/mistralai": "^0.5.0",
     "@mui/material": "^5.16.0",
