--- a/package.json
+++ b/package.json
@@ -38,8 +38,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.0",
     "react-syntax-highlighter": "^15.5.0",
-    "recoil": "^0.7.7",
-    "sonner": "^2.0.5"
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
