--- a/package.json
+++ b/package.json
@@ -10,37 +10,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.1",
-    "@google-ai/generativelanguage": "^3.7.0",
     "@google/generative-ai": "^0.24.1",
-    "@mistralai/mistralai": "^1.14.0",
-    "@mui/material": "^7.3.7",
     "@reduxjs/toolkit": "^2.11.2",
+    "@tailwindcss/vite": "^4.1.18",
     "axios": "^1.13.5",
-    "bcryptjs": "^3.0.3",
-    "body-parser": "^2.2.2",
-    "express": "^5.2.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.34.0",
-    "generative-ai": "^0.1.4",
     "highlight.js": "^11.11.1",
-    "html-react-parser": "^5.2.17",
-    "jsonwebtoken": "^9.0.3",
-    "locomotive-scroll": "^5.0.1",
     "lucide-react": "^0.563.0",
     "marked": "^17.0.1",
-    "mongoose": "^9.2.0",
-    "mui": "^0.0.1",
-    "prism-react-renderer": "^2.4.1",
-    "prismjs": "^1.30.0",
+    "radix-ui": "^1.4.3",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
-    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.13.0",
     "react-syntax-highlighter": "^16.1.0",
-    "recoil": "^0.7.7",
-    "sonner": "^2.0.7"
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@types/react": "^19.2.14",
